@@ -6,6 +6,7 @@ version 2.3.4:
   - Ctrl-C was not working anymore in oarsub.
     It seems that the signal handler does not handle the previous syntax
     ($SIG = 'qdel')
+  - Bug #7487: bad initialisation of the gnatt for the container jobs.
 
 version 2.3.3:
 --------------
